k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-cicd-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-cicd-app
  template:
    metadata:
      labels:
        app: k8s-cicd-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: k8s-cicd-app
          image: <your-dockerhub-username>/k8s-cicd-app:latest
          ports:
            - containerPort: 3000
