k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-cicd-service
spec:
  selector:
    app: k8s-cicd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
